fix visible bullet point in error list

--- a/src/core/css/ErrorHandler.scss
+++ b/src/core/css/ErrorHandler.scss
@@ -7,4 +7,8 @@
   padding: 10px;
   margin: 0;
   margin-bottom: 10px;
+
+  > li {
+    list-style: none;
+  }
 }
